containerとulの繰り返しを追加 #each tasks >task

--- a/sample-app.html
+++ b/sample-app.html
@@ -3,9 +3,16 @@
 </head>
 
 <body>
-  <h1>Meteorのテスト</h1>
-
-  {{> hello}}
+	<div class="container">
+		<header>
+			<h1>Todo List</h1>
+		</header>
+		<ul>
+			{{#each tasks}}
+				{{> task}}
+			{{/each}}
+		</ul>
+	</div>
 </body>
 
 <template name="hello">
