--- a/sample-app.html
+++ b/sample-app.html
@@ -15,7 +15,6 @@
 	</div>
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="task">
+	<li>{{text}}</li>
 </template>
