--- a/sample-app.html
+++ b/sample-app.html
@@ -19,5 +19,9 @@
 </body>
 <!-- bodyの外に定義 -->
 <template name="task">
-	<li>{{text}}</li>
+	<li class="{{#if checked}}checked{{/if}}">
+		<button class="delete">&times;</button>
+		<input type="checkbox" checked="{{checked}}" class="toggle-checked" />
+		<span class="text">{{text}}</span>
+	</li>
 </template>
