--- a/sample-app.html
+++ b/sample-app.html
@@ -9,6 +9,8 @@
 				<input type="checkbox" checked="{{hideCompleted}}" />
 				Hide Completed Tasks
 			</label>
+			<!-- ログインボタンの表示 -->
+			{{> loginButtons}}
 			<form class="new-task">
 				<input type="text" name="text" placeholder="Type to add new tasks">
 			</form>
