--- a/sample-app.html
+++ b/sample-app.html
@@ -11,9 +11,11 @@
 			</label>
 			<!-- ログインボタンの表示 -->
 			{{> loginButtons}}
+			{{#if currentUser}}
 			<form class="new-task">
 				<input type="text" name="text" placeholder="Type to add new tasks">
 			</form>
+			{{/if}}
 		</header>
 		<ul>
 			{{#each tasks}}
@@ -28,6 +30,6 @@
 	<li class="{{#if checked}}checked{{/if}}">
 		<button class="delete">&times;</button>
 		<input type="checkbox" checked="{{checked}}" class="toggle-checked" />
-		<span class="text">{{text}}</span>
+		<span class="text"><strong>{{username}}</strong> - {{text}}</span>
 	</li>
 </template>
